Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-46641

[XCB] Slow window/widget resizing using Qt5

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P4: Low
    • 5.6.0
    • 5.5.0 Beta
    • GUI: OpenGL, QPA: X11/XCB
    • None
    • Arch Linux, Qt 5.5.0 beta compiled from sources
    • 83d7e83b78df037836d81a9aedaba99655a587b9

    Description

      Attachment contains patch which can speed up window resizing using Qt5 on XCB. It doesn't affect QRasterWindow, but it affects all QWidget-based windows and OpenGL windows.

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              paeglis Gatis Paeglis
              zaps166 Błażej Szczygieł
              Votes:
              1 Vote for this issue
              Watchers:
              5 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes